syntax = "proto3";

message TeamMember
{
  uint64 player_id = 1;
}
